--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/papaparse": "^5.3.14",
     "lucide-react": "^0.435.0",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "zod": "^3.23.8"
